crates/reinhardt-core/crates/macros/tests/ui/injectable/fail/no_attribute.stderr
error: Field must have either #[inject] or #[no_inject] attribute. Use #[inject] for dependency injection, or #[no_inject] for default initialization.
  --> tests/ui/injectable/fail/no_attribute.rs:22:2
   |
22 |     db: Database,  // Error: must have #[inject] or #[no_inject]
   |     ^^^^^^^^^^^^
